--- a/projects/utilsLib/build.gradle
+++ b/projects/utilsLib/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-buildDir = '../../build/utilsLib'
+buildDir = '/tmp/studio/utilsLib'
 
 android {
     compileSdkVersion 22
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0.1"
+        versionCode 2
+        versionName "1.2.0"
     }
 
     sourceSets {
