--- a/projects/utilsLib/build.gradle
+++ b/projects/utilsLib/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-buildDir = '/tmp/studio/utilsLib'
+buildDir = "${System.properties['user.home']}/.gradle/build/${rootProject.name}/${project.name}"
 
 android {
     compileSdkVersion 22
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 22
-        versionCode 3
-        versionName "1.2.1"
+        versionCode 4
+        versionName "1.2.2"
     }
 
     sourceSets {
